--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
                         <!--voici normalement dans ce commentaire l'icone a utiliser au lieu de celui ci-dessous. Mais il est indisponible, car sous utilisation pro: <i class="fal fa-info-circle"></i> -->  
                     <p><i class="fas fa-info-circle"></i>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
-                <section class="pilier" > 
-                    <section id="gdpic">
+                <section class="panelTypeHebergements" > 
+                    <section id="presentHebergGeneral">
                         <h2 id="hebergementsAMarseille">Hébergements à Marseille</h2>
-                        <section id="grp-pic">
-                            <div class="phototel">
+                        <section id="groupHebergGeneral">
+                            <div class="hebergProposed">
                                 <a href="#">
-                                    <img src="./assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" class="impic" >
-                                    <h3 class="soustitre">Auberge La Cannebière</h3>
+                                    <img src="./assets/images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="" class="ancreImgHeberg" >
+                                    <h3 class="nomHeberg">Auberge La Cannebière</h3>
                                     <h4>Nuit à partir de <b>25€</b></h4>
                                     <div class="star">
                                         <i class="fas fa-star"></i>
@@ -89,10 +89,10 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="phototel">
+                            <div class="hebergProposed">
                                 <a href="#">
-                                    <img src="./assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="" class="impic" >
-                                    <h3 class="soustitre">Hôtel Du Port</h3>
+                                    <img src="./assets/images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="" class="ancreImgHeberg" >
+                                    <h3 class="nomHeberg">Hôtel Du Port</h3>
                                     <h4>Nuit à partir de 52€</h4>
                                     <div class="star">
                                         <i class="fas fa-star"></i>
@@ -103,10 +103,10 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="phototel">
+                            <div class="hebergProposed">
                                 <a href="#">
-                                    <img src="./assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="" class="impic" >
-                                    <h3 class="soustitre">Hôtel Les Mouettes</h3>
+                                    <img src="./assets/images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="" class="ancreImgHeberg" >
+                                    <h3 class="nomHeberg">Hôtel Les Mouettes</h3>
                                     <h4>Nuit à partir de 76€</h4>
                                     <div class="star">
                                         <i class="fas fa-star"></i>
@@ -117,10 +117,10 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="phototel">
+                            <div class="hebergProposed">
                                 <a href="#">
-                                    <img src="./assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="" class="impic" >
-                                    <h3 class="soustitre">Hôtel De La Mer</h3>
+                                    <img src="./assets/images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="" class="ancreImgHeberg" >
+                                    <h3 class="nomHeberg">Hôtel De La Mer</h3>
                                     <h4>Nuit à partir de 46€</h4>
                                     <div class="star" >
                                         <i class="fas fa-star"></i>
@@ -131,10 +131,10 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="phototel">
+                            <div class="hebergProposed">
                                 <a href="#">
-                                    <img src="./assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="" class="impic" >
-                                    <h3 class="soustitre">Auberge Le Panier</h3>
+                                    <img src="./assets/images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="" class="ancreImgHeberg" >
+                                    <h3 class="nomHeberg">Auberge Le Panier</h3>
                                     <h4>Nuit à partir de <b>23€</b> </h4>
                                     <div class="star">
                                         <i i class="fas fa-star"></i>
@@ -145,10 +145,10 @@
                                     </div>
                                 </a>
                             </div>
-                            <div class="phototel">
+                            <div class="hebergProposed">
                                 <a href="#">
-                                    <img src="./assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="" class="impic" >
-                                    <h3 class="soustitre">Hôtel Chez Amina</h3>
+                                    <img src="./assets/images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="" class="ancreImgHeberg" >
+                                    <h3 class="nomHeberg">Hôtel Chez Amina</h3>
                                     <h4>Nuit à partir de 96€</h4>
                                     <div class="star">
                                         <i class="fas fa-star"></i>
@@ -161,12 +161,12 @@
                             </div>
                         </section>
                         <h3>
-                            <a href="#" id="afich" target="_blank">Afficher plus</a>
+                            <a href="#" id="deroulantPourPlus" target="_blank">Afficher plus</a>
                         </h3>    
                     </section>
                     <aside>
                         <div id="popul">
-                            <h2 class="soustitre">Les plus populaires</h2>
+                            <h2 class="nomHeberg">Les plus populaires</h2>
                             <span id="courb">
                                 <i class="fas fa-chart-line"></i>
                             </span>
@@ -178,7 +178,7 @@
                                     <img src="./assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le Soleil Du Matin" >
                                 </figure>
                                 <div class="haside">
-                                    <h3 class="soustitre">Hôtel Le Soleil Du Matin</h3>
+                                    <h3 class="nomHeberg">Hôtel Le Soleil Du Matin</h3>
                                     <h4>Nuit à partir de 128€</h4>
                                     <div class="star" >
                                         <i class="fas fa-star"></i>
@@ -196,7 +196,7 @@
                                     <img src="./assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" >
                                 </figure>
                                 <div class="haside">
-                                    <h3 class="soustitre">Au coeur de l'eau Chambres d'hôtes</h3>
+                                    <h3 class="nomHeberg">Au coeur de l'eau Chambres d'hôtes</h3>
                                     <h4>Nuit à partir de 71€</h4>
                                     <div class="star">
                                         <i class="fas fa-star"></i>
@@ -215,7 +215,7 @@
                                     <img src="./assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout Bleu et Blanc" >
                                 </figure>
                                 <div class="haside">
-                                    <h3 class="soustitre">Hôtel Tout Bleu et Blanc</h3>
+                                    <h3 class="nomHeberg">Hôtel Tout Bleu et Blanc</h3>
                                     <h4>Nuit à partir de 68€</h4>
                                     <div class="star"  >
                                         <i class="fas fa-star"></i>
@@ -231,14 +231,14 @@
                 </section>
                 <div class="boss">
                     <div id="hbm">
-                        <h2 class="soustitre" id="activitesMarseilles" >Activités à Marseille</h2>
+                        <h2 class="nomHeberg" id="activitesMarseilles" >Activités à Marseille</h2>
                     </div >
                     <div class="actMars">      
                         <div class="patrouille">
                             <a href="#">
                                 <figure class="emplwoan">
                                     <img id="fgcs1" src="./assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
-                                    <figcaption class="soustitre">Vieux Port </figcaption>
+                                    <figcaption class="nomHeberg">Vieux Port </figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -246,13 +246,13 @@
                             <a href="#">
                                 <figure class="emplduo" id="pfgcd1">
                                     <img id="fgcd1" src="./assets/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
-                                    <figcaption class="soustitre">Fort de Pomègues</figcaption>
+                                    <figcaption class="nomHeberg">Fort de Pomègues</figcaption>
                                 </figure>
                             </a>
                             <a href="#">
                                 <figure class="emplduo" id="pfgcd2">
                                     <img id="fgcd2" src="./assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
-                                    <figcaption class="soustitre">Îles du Frioul</figcaption>   
+                                    <figcaption class="nomHeberg">Îles du Frioul</figcaption>   
                                 </figure>
                             </a>
                         </div>
@@ -261,7 +261,7 @@
                             <a href="#">
                                 <figure id="pfgcs2" class="emplwoan">
                                     <img  id="fgcs2" src="./assets/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
-                                    <figcaption class="soustitre">Parc National des Calanques</figcaption>
+                                    <figcaption class="nomHeberg">Parc National des Calanques</figcaption>
                                 </figure>
                             </a>
                         </div>
@@ -269,13 +269,13 @@
                             <a href="#">
                                 <figure class="emplduo" id="pfgcd3">
                                     <img id="fgcd3" src="./assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
-                                    <figcaption class="soustitre">Notre-Dame-de-la-Garde</figcaption>
+                                    <figcaption class="nomHeberg">Notre-Dame-de-la-Garde</figcaption>
                                 </figure> 
                             </a>
                             <a href="#">
                                 <figure class="emplduo" id="pfgcd4">
                                     <img id="fgcd4" src="./assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
-                                    <figcaption class="soustitre">Parc Longchamp</figcaption>   
+                                    <figcaption class="nomHeberg">Parc Longchamp</figcaption>   
                                 </figure>
                             </a>
 
@@ -287,18 +287,18 @@
         </div>      
         <footer>
             <div class="footcat">
-                <h3 class="soustitre"><a href="#">A propos</a></h3>
+                <h3 class="nomHeberg"><a href="#">A propos</a></h3>
                 <h4><a href="#">Fonctionnement du Site</a> </h4>
                 <h4><a href="#">Conditions générales de vente</a></h4>
                 <h4><a href="#">Données et Confidentialité</a></h4>
             </div>
             <div class="footcat">
-                <h3 class="soustitre"><a href="#">Nos hébergements</a></h3>
+                <h3 class="nomHeberg"><a href="#">Nos hébergements</a></h3>
                 <h4><a href="#">Charte Qualité</a></h4>
                 <h4><a href="#">Soumettre votre hôtel</a></h4>
             </div>
             <div class="footcat">
-                <h3 class="soustitre"><a href="#">Assistance</a></h3>
+                <h3 class="nomHeberg"><a href="#">Assistance</a></h3>
                 <h4><a href="#">Centre d'aide</a></h4>
                 <h4><a href="#">Nous contacter</a></h4>
             </div>
