--- a/index.html
+++ b/index.html
@@ -165,19 +165,19 @@
                         </h3>    
                     </section>
                     <aside>
-                        <div id="popul">
+                        <div id="hebergPopulaire">
                             <h2 class="nomHeberg">Les plus populaires</h2>
-                            <span id="courb">
+                            <span id="logoCourb">
                                 <i class="fas fa-chart-line"></i>
                             </span>
                         </div>
-                        <div class="gaside">
-                            <div id="1" class="picaside">
+                        <div class="groupHebergPopular">
+                            <div id="firstHebergProposedPopular" class="hebergPopularProposed">
                                 <a id="a1" href="#">
-                                <figure class="populaireaside">
+                                <figure class="photoHebergementPopular">
                                     <img src="./assets/images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le Soleil Du Matin" >
                                 </figure>
-                                <div class="haside">
+                                <div class="descriptHebergPopular">
                                     <h3 class="nomHeberg">Hôtel Le Soleil Du Matin</h3>
                                     <h4>Nuit à partir de 128€</h4>
                                     <div class="star" >
@@ -190,12 +190,12 @@
                                 </div>
                                 </a>
                             </div>
-                            <div id="2" class="picaside">
+                            <div id="secondHebergProposedPopular" class="hebergPopularProposed">
                                 <a id="a2" href="#">
-                                <figure class="populaireaside">
+                                <figure class="photoHebergementPopular">
                                     <img src="./assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" >
                                 </figure>
-                                <div class="haside">
+                                <div class="descriptHebergPopular">
                                     <h3 class="nomHeberg">Au coeur de l'eau Chambres d'hôtes</h3>
                                     <h4>Nuit à partir de 71€</h4>
                                     <div class="star">
@@ -209,15 +209,15 @@
                                 </a>
                             </div>
                         </div>
-                        <div id="3" class="picaside">
+                        <div id="thirdHebergProposedPopular" class="hebergPopularProposed">
                             <a id="a3" href="#">
-                                <figure class="populaireaside">
+                                <figure class="photoHebergementPopular">
                                     <img src="./assets/images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout Bleu et Blanc" >
                                 </figure>
-                                <div class="haside">
+                                <div class="descriptHebergPopular">
                                     <h3 class="nomHeberg">Hôtel Tout Bleu et Blanc</h3>
                                     <h4>Nuit à partir de 68€</h4>
-                                    <div class="star"  >
+                                    <div class="star" >
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
@@ -229,51 +229,51 @@
                         </div>
                     </aside>
                 </section>
-                <div class="boss">
-                    <div id="hbm">
+                <div class="panelActivitesMarseille">
+                    <div id="presenteActivitesMarseille">
                         <h2 class="nomHeberg" id="activitesMarseilles" >Activités à Marseille</h2>
                     </div >
-                    <div class="actMars">      
-                        <div class="patrouille">
+                    <div class="group-Activites-Marseille">      
+                        <div class="activite-Marseille">
                             <a href="#">
-                                <figure class="emplwoan">
-                                    <img id="fgcs1" src="./assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
-                                    <figcaption class="nomHeberg">Vieux Port </figcaption>
+                                <figure class="photo-Grand-Format-Activite">
+                                    <img id="img-Grand-Format" src="./assets/images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux Port">
+                                    <figcaption class="nomHeberg">Vieux Port</figcaption>
                                 </figure>
                             </a>
                         </div>
-                        <div class="patrouille">
+                        <div class="activite-Marseille">
                             <a href="#">
-                                <figure class="emplduo" id="pfgcd1">
+                                <figure class="photo-Petit-Format-Activites" id="pfgcd1">
                                     <img id="fgcd1" src="./assets/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                                     <figcaption class="nomHeberg">Fort de Pomègues</figcaption>
                                 </figure>
                             </a>
                             <a href="#">
-                                <figure class="emplduo" id="pfgcd2">
+                                <figure class="photo-Petit-Format-Activites" id="pfgcd2">
                                     <img id="fgcd2" src="./assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
                                     <figcaption class="nomHeberg">Îles du Frioul</figcaption>   
                                 </figure>
                             </a>
                         </div>
-                        <div class="patrouille">
+                        <div class="activite-Marseille">
                             <div class="soupatrouill"></div>
                             <a href="#">
-                                <figure id="pfgcs2" class="emplwoan">
+                                <figure id="pfgcs2" class="photo-Grand-Format-Activite">
                                     <img  id="fgcs2" src="./assets/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
                                     <figcaption class="nomHeberg">Parc National des Calanques</figcaption>
                                 </figure>
                             </a>
                         </div>
-                        <div class="patrouille" >  
+                        <div class="activite-Marseille" >  
                             <a href="#">
-                                <figure class="emplduo" id="pfgcd3">
+                                <figure class="photo-Petit-Format-Activites" id="pfgcd3">
                                     <img id="fgcd3" src="./assets/images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde">
                                     <figcaption class="nomHeberg">Notre-Dame-de-la-Garde</figcaption>
                                 </figure> 
                             </a>
                             <a href="#">
-                                <figure class="emplduo" id="pfgcd4">
+                                <figure class="photo-Petit-Format-Activites" id="pfgcd4">
                                     <img id="fgcd4" src="./assets/images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp">
                                     <figcaption class="nomHeberg">Parc Longchamp</figcaption>   
                                 </figure>
