--- a/index.html
+++ b/index.html
@@ -244,20 +244,19 @@
                         </div>
                         <div class="activite-Marseille">
                             <a href="#">
-                                <figure class="photo-Petit-Format-Activites" id="pfgcd1">
+                                <figure class="photo-Petit-Format-Activites" id="ancre-Photo-PetitFormat-1-Activites">
                                     <img id="fgcd1" src="./assets/images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues">
                                     <figcaption class="nomHeberg">Fort de Pomègues</figcaption>
                                 </figure>
                             </a>
                             <a href="#">
-                                <figure class="photo-Petit-Format-Activites" id="pfgcd2">
+                                <figure class="photo-Petit-Format-Activites" id="pfgcd2">  <!--   régler au plus vite...   ca bug-->
                                     <img id="fgcd2" src="./assets/images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul">
                                     <figcaption class="nomHeberg">Îles du Frioul</figcaption>   
                                 </figure>
                             </a>
                         </div>
                         <div class="activite-Marseille">
-                            <div class="soupatrouill"></div>
                             <a href="#">
                                 <figure id="pfgcs2" class="photo-Grand-Format-Activite">
                                     <img  id="fgcs2" src="./assets/images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques">
@@ -286,18 +285,18 @@
             </main>
         </div>      
         <footer>
-            <div class="footcat">
+            <div class="navigation-footer">
                 <h3 class="nomHeberg"><a href="#">A propos</a></h3>
                 <h4><a href="#">Fonctionnement du Site</a> </h4>
                 <h4><a href="#">Conditions générales de vente</a></h4>
                 <h4><a href="#">Données et Confidentialité</a></h4>
             </div>
-            <div class="footcat">
+            <div class="navigation-footer">
                 <h3 class="nomHeberg"><a href="#">Nos hébergements</a></h3>
                 <h4><a href="#">Charte Qualité</a></h4>
                 <h4><a href="#">Soumettre votre hôtel</a></h4>
             </div>
-            <div class="footcat">
+            <div class="navigation-footer">
                 <h3 class="nomHeberg"><a href="#">Assistance</a></h3>
                 <h4><a href="#">Centre d'aide</a></h4>
                 <h4><a href="#">Nous contacter</a></h4>
