--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                     <h3 class="nomHeberg">Auberge Le Panier</h3>
                                     <h4>Nuit à partir de <b>23€</b> </h4>
                                     <div class="star">
-                                        <i i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
@@ -204,7 +204,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star inactive"></i> 
-                                    </div
+                                    </div>
                                 </div>
                                 </a>
                             </div>
