--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
         <script src="https://kit.fontawesome.com/2eb67eaae2.js" crossorigin="anonymous"></script>
@@ -137,7 +138,7 @@
                                     <h3 class="nomHeberg">Auberge Le Panier</h3>
                                     <h4>Nuit à partir de <b>23€</b> </h4>
                                     <div class="star">
-                                        <i class="fas fa-star"></i>
+                                        <i i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
@@ -204,7 +205,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star inactive"></i> 
-                                    </div>
+                                    </div
                                 </div>
                                 </a>
                             </div>
