--- a/index.html
+++ b/index.html
@@ -39,30 +39,30 @@
                     <div class="formulaireInserRecherche" id="filtre">
                         <form class="filtr"  action="paspret.js" method="POST" title="form">
                             <label>Filtres</label>
-                            <div id="lesco" href="#"> <!-- Ici j'ai changé le <a> en <div> mais..  -->
+                            <div id="lesco" > <!-- Ici j'ai changé le <a> en <div> mais..  -->
                                 <div id="eco">
                                     <div class="icon">
                                         <i class="fas fa-money-bill-wave"></i>
                                     </div>
-                                    <div id="ecocon" type="text" value="Economique">Economique</div>
+                                    <div id="ecocon"  >Economique</div>
                                 </div>                    
                                 <div id="famil">
                                     <div class="icon">
                                         <i class="fas fa-child" ></i>
                                     </div>   
-                                    <div id="famcon" type="text" value="Familial">Familial</div>
+                                    <div id="famcon"  >Familial</div>
                                 </div>
                                 <div id="romant">
                                     <div class="icon">
                                         <i class="fas fa-heart"></i>
                                     </div>
-                                    <div id="romcon" type="text" value="Romantique">Romantique</div>
+                                    <div id="romcon"  >Romantique</div>
                                 </div>
                                 <div id="autoriz">
                                     <div class="icon">
                                         <i class="fas fa-dog"></i>
                                     </div>
-                                    <div id="autocon" type="text" value="Animaux autorisés">Animaux autorisés</div>
+                                    <div id="autocon" >Animaux autorisés</div>
                                 </div>
                             </div>
                         </form> 
@@ -139,7 +139,7 @@
                                     <h3 class="nomHeberg">Auberge Le Panier</h3>
                                     <h4>Nuit à partir de <b>23€</b> </h4>
                                     <div class="star">
-                                        <i i class="fas fa-star"></i>
+                                        <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
