--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                 </a>
                             </div>
                             <div id="secondHebergProposedPopular" class="hebergPopularProposed">
-                                <a id="a2" href="#">
+                                <a id="a1" href="#">
                                 <figure class="photoHebergementPopular">
                                     <img src="./assets/images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" >
                                 </figure>
@@ -206,7 +206,7 @@
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star"></i>
                                         <i class="fas fa-star inactive"></i> 
-                                    </div
+                                    </div>
                                 </div>
                                 </a>
                             </div>
